<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/list_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/main_text"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:onClick="goToWebsite"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programmed_by"
        android:paddingTop="5dp"
        android:textSize="25sp"
        android:textColor="@color/main_text"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/name"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="25sp"
        android:textColor="@color/main_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_source"
        android:paddingTop="5dp"
        android:textSize="25sp"
        android:textColor="@color/main_text"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/github_link"
        android:onClick="goToGitHub"
        android:paddingTop="5dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        android:textColor="@color/main_text"
        android:layout_gravity="center"
        android:gravity="center"/>

</LinearLayout>